gcc/testsuite/g++.dg/pth/sys-types.cc
#include <sys/types.h> 	// { dg-error "fatal" "invalid hunk" { xfail *-*-* } }
// { dg-error "excess errors" "" { xfail *-*-* } }
